feat: Migrate to Vite with ESM and Tailwind CSS
This commit transitions the project from a manual script-based setup to a Vite-powered build system. It includes the following key changes:

-   **Vite Integration:** Replaces direct CDN imports for React, ReactDOM, and other libraries with Vite's import map and ESM resolution.
-   **Tailwind CSS Configuration:** Moves Tailwind CSS configuration to a dedicated `tailwind.config.js` file and imports its directives into `index.css`, enabling better management and utilization of Tailwind's features.
-   **Global Styles:** Introduces a new `index.css` file to define global styles, including custom scrollbars and selection colors, to enhance the application's commercial-grade feel.
-   **Build Process:** Sets up `postcss.config.js` for processing CSS with Tailwind and Autoprefixer.

This migration aims to improve the development experience, build performance, and overall project maintainability.

--- a/index.html
+++ b/index.html
@@ -4,53 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nano Banana 提示词工坊</title>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              banana: {
-                50: '#fffbeb',
-                100: '#fef3c7',
-                200: '#fde68a',
-                300: '#fcd34d',
-                400: '#fbbf24',
-                500: '#f59e0b',
-                600: '#d97706',
-                700: '#b45309',
-                800: '#92400e',
-                900: '#78350f',
-                950: '#451a03',
-              },
-              zinc: {
-                850: '#1f2025',
-                950: '#09090b',
-              }
-            },
-            fontFamily: {
-              mono: ['ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', "Liberation Mono", "Courier New", 'monospace'],
-            }
-          },
-        },
-      }
-    </script>
-    <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
   "imports": {
+    "vite": "https://esm.sh/vite@^7.2.7",
+    "recharts": "https://esm.sh/recharts@^3.5.1",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "recharts": "https://esm.sh/recharts@^3.5.1",
-    "react": "https://esm.sh/react@^19.2.3",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "vite": "https://esm.sh/vite@^7.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
-  <body class="bg-zinc-950 text-zinc-100 antialiased h-screen overflow-hidden selection:bg-banana-500 selection:text-white">
+  <body class="antialiased h-screen overflow-hidden">
     <div id="root" class="h-full"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
