--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nano Banana 提示词工坊</title>
+    <title>Hotker Prompt Studio</title>
   <script type="importmap">
 {
   "imports": {
