--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Hotker Prompt Studio</title>
   <script type="importmap">
 {
@@ -19,8 +21,8 @@
 }
 </script>
 </head>
-  <body class="antialiased h-screen overflow-hidden">
-    <div id="root" class="h-full"></div>
+  <body class="antialiased overflow-hidden">
+    <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
