--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "path": "https://esm.sh/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4",
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "multer": "https://esm.sh/multer@^2.0.2",
+    "express": "https://esm.sh/express@^5.2.1",
+    "better-sqlite3": "https://esm.sh/better-sqlite3@^12.5.0"
   }
 }
 </script>
